2003-10-25  Petr Stehlik  <pstehlik@sophics.cz>
* atari_falcon.c: disable compiling with stereo sound enabled

* log.c: do MacOSX a favor and generally allow platform specific Aprint
  output

* atari.c: wrong path to disk image is not a reason to quit with an error
  message

* mzpokeysnd.c: simple fix for SERIO_SOUND

* pokey.c: some platforms (MacOSX) might need different SOUND_GAIN
  so it's possible to define it in configure/Makefile now.


2003-10-24  Piotr Fusik  <fox@scene.pl>
* sio.c: "Overmind" runs with NEW_CYCLE_EXACT and SIO patch enabled.
  I implemented NO_SECTOR_DELAY in 0.9.9i to allow running the "Overmind"
  demo.  Originally this hack relied on the xpos variable and thus wasn't
  NEW_CYCLE_EXACT compatible.  Now the delay occurs only between
  successive reads of sector 1, not every time reading sector 2.
  This makes every disk image boot 0.2 sec. faster.
* sio.h: NO_SECTOR_DELAY is internal to sio.c


2003-09-23  Piotr Fusik  <fox@scene.pl>
* ui.c, sio.h: added Rotate_Disks() to UI


2003-09-22  Perry McFarlane  <perry_m@fastmail.fm>
* antic.c: got sprite collisions working with NEW_CYCLE_EXACT
  (broken by mistake)
* antic.c: a fix for "Sweet Illusions" part with wireframe vectors
  (sprites highlighting the scrolling text)


2003-09-21  Piotr Fusik  <fox@scene.pl>
* input.c: implemented bit 6 of SKSTAT - now you can exit from
  the "spinning camera" part of "Cool Emotion"
* mkimg.c: general clean-up: int main, fixed #includes, etc.


2003-09-16  Perry McFarlane  <perry_m@fastmail.fm>
* antic.c: cycle-perfect CHACTL mid-scanline changes
* DOC/BUGS: updated


2003-09-15  Chris Martin <cmartin@ti.com>
* DOC/rdevice_faq.txt: detailed documentation


2003-05-28  Chris Martin <cmartin@ti.com>
* rdevice.c: fixed several bugs with the sockets version, and it now includes
  a serial port mode as well.  The R: device can now be emulated by network
  sockets or you can connect directly to the host serial ports (/dev/ttyS0,